--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "lint": "eslint src/",
-	"server": "http-server dist"
+    "server": "http-server dist"
   },
   "husky": {
     "hooks": {
@@ -27,6 +27,7 @@
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "shortid": "^2.2.16"
   },
